--- a/protfolio.css
+++ b/protfolio.css
@@ -141,11 +141,31 @@ main{
     margin: 0 auto;
     justify-content: center;
     text-align: center;
-
+    margin-bottom: 20px;
+    
 }
 .content-title2{
     text-align: center;
     font-size: 35px;
     font-weight: bold;
     color: #181818;
+}
+.section3{
+    margin-top: 20px;
+    display: flex;
+    gap: 24px;
+}
+.skill-title{
+    margin-top:15px ;
+}
+.skill-description{
+    font-size: 16px;
+    color: #757575;
+}
+.skill{
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06) ;
+    border-radius:5px ;
+    padding: 30px;
+    margin-top: 20px;
+
 }
