--- a/protfolio.css
+++ b/protfolio.css
@@ -150,6 +150,7 @@ main{
     font-weight: bold;
     color: #181818;
 }
+/* section3 */
 .section3{
     margin-top: 20px;
     display: flex;
@@ -168,4 +169,32 @@ main{
     padding: 30px;
     margin-top: 20px;
 
+}
+.section5{
+    display: flex;
+    gap: 70px;
+}
+.skill-description{
+    color: #757575;
+}
+.collage{
+    font-size: 20px;
+    font-weight: 600;
+    color: #757575;
+    margin-top: 0px;
+}
+.degree{
+    
+    font-size: 25px;
+    font-weight: bold;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume-title{
+    font-size: 30px;
+    font-weight: bold;
+    color: #474747;
+}
+.hr{
+    border-color: #d1d1d1;
 }
