--- a/protfolio.css
+++ b/protfolio.css
@@ -196,5 +196,29 @@ main{
     color: #474747;
 }
 .hr{
-    border-color: #d1d1d1;
+    border: 2px solid #d1d1d1;
+}
+.section6{
+    text-align: center;
+    margin: 50px;
+}
+/* footer */
+.last-content{
+    display: flex;
+    gap: 117px;
+}
+input{
+    display: block;
+}
+.f-title{
+    font-size: 35px;
+    font-weight: bold;
+}
+.contact{
+    padding: 130px 230px;
+    
+}
+footer{
+    background-color:#FFF8F3;
+    width: 1600px;
 }
